@@ -1,4 +1,5 @@
 == 0.2 / unreleased
+* bugfix: Hide the print button from the final printed document
 * Make it possible to have different prices for monthly and yearly payments
 
 == 0.1 / 2013-12-02
